tdf#141416: partial revert of the fix for tdf#81396

d4743045a0b320449d07a957463a76bb8b13f939 < the cells need to
be imported before we handle charts, tdf#81396 >

Import time of sample file in tdf#141416 goes from more than an hour
to 1 minute while keeping tdf#81396 fixed
Unittest for tdf#81396 added in 9a59068fc31d7150e255ada91c59b8299636f185

Change-Id: Ic15d57945069397076c483b6ef8f3070057db317
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113818
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>