sc/source/filter/oox/workbookfragment.cxx
@@ -481,13 +481,10 @@ void WorkbookFragment::finalizeImport()
 
     // final conversions, e.g. calculation settings and view settings
     finalizeWorkbookImport();
-    //
+
     //stop preventing establishment of listeners as is done in
     //ScDocShell::AfterXMLLoading() for ods
     getScDocument().SetInsertingFromOtherDoc(false);
-    getDocImport().finalize();
-
-    recalcFormulaCells();
 
     for( WorksheetHelper* pHelper : aHelpers )
     {
@@ -500,6 +497,10 @@ void WorkbookFragment::finalizeImport()
         rxFragment.clear();
         rxSheetGlob.reset();
     }
+
+    getDocImport().finalize();
+
+    recalcFormulaCells();
 
     OUString aRevHeadersPath = getFragmentPathFromFirstType(CREATE_OFFICEDOC_RELATION_TYPE("revisionHeaders"));
     if (!aRevHeadersPath.isEmpty())
